package com.ordercompleted.handlers.query;

import lombok.AllArgsConstructor;
import lombok.Getter;

@AllArgsConstructor
@Getter
public class GetOrderQuery {
  private final String orderId;


}

